[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/grass-background1.png" type="Texture" id=5]
[ext_resource path="res://sound/battleThemeA.mp3" type="AudioStream" id=6]
[ext_resource path="res://sound/sword_clash.2.mp3" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
mob_scene = ExtResource( 3 )

[node name="GrassBackground" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 512, 450 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
autoplay = true

[node name="ClashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 10.0

[connection signal="invaded_relay" from="." to="Player" method="_on_Main_invaded_relay"]
[connection signal="body_exited" from="Player" to="Player" method="_on_Player_body_exited"]
[connection signal="hit" from="Player" to="." method="sound_hit_handler"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="complete_reset_game" from="HUD" to="." method="_on_HUD_complete_reset_game"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="finished" from="ClashSound" to="." method="_on_ClashSound_finished"]
